fix styling on firefox

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -7,6 +7,7 @@
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -moz-user-select: none;
+  outline: none;
 }
 
 html, body
