--- a/app/styles/reset.css
+++ b/app/styles/reset.css
@@ -46,3 +46,9 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+/* firefox */
+
+button::-moz-focus-inner {
+  border: 0;
+}
