--- a/app/styles/ui.css
+++ b/app/styles/ui.css
@@ -72,6 +72,7 @@
   font-size: 20px;
   vertical-align: top;
   cursor: pointer;
+  color: #000;
 }
 
 /* matrix */
